[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fonts/lerotica-regular/lerotica-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Shaders/blur.shader" type="Shader" id=4]
[ext_resource path="res://Assets/Shaders/grow.shader" type="Shader" id=5]
[ext_resource path="res://Assets/Shaders/wave_text.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/blur_amount = 0.923
shader_param/panel_color = Color( 0, 0, 0, 1 )
shader_param/panel_participation = 0.092

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/blur_amount = 0.923
shader_param/panel_color = Color( 0, 0, 0, 1 )
shader_param/panel_participation = 0.092

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 5 )
shader_param/time = 0.0
shader_param/amount = 1.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 6 )
shader_param/speed = 4.0
shader_param/range = 2.0
shader_param/scale = 20.0

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 1 )

[node name="GameUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu"]
margin_left = 416.0
margin_top = 288.0
margin_right = 616.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 4 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
margin_right = 256.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
margin_left = 52.0
margin_top = 261.0
margin_right = 204.0
margin_bottom = 339.0
custom_constants/separation = 20
alignment = 1

[node name="BackToMenu" type="Button" parent="PauseMenu/CenterContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 29.0
size_flags_vertical = 0
text = "Back to Menu"

[node name="Continue" type="Button" parent="PauseMenu/CenterContainer/HBoxContainer"]
margin_top = 49.0
margin_right = 152.0
margin_bottom = 78.0
size_flags_vertical = 0
text = "Continue"

[node name="GameOverMenu" type="Control" parent="."]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameOverMenu"]
material = SubResource( 3 )
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverMenu"]
margin_left = 416.0
margin_top = 288.0
margin_right = 616.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 4 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameOverMenu"]
margin_right = 256.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="GameOverMenu/CenterContainer"]
margin_left = 52.0
margin_top = 261.0
margin_right = 204.0
margin_bottom = 339.0
custom_constants/separation = 20
alignment = 1

[node name="BackToMenu" type="Button" parent="GameOverMenu/CenterContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 29.0
size_flags_vertical = 0
text = "Back to Menu"

[node name="Retry" type="Button" parent="GameOverMenu/CenterContainer/HBoxContainer"]
margin_top = 49.0
margin_right = 152.0
margin_bottom = 78.0
size_flags_vertical = 0
text = "Retry"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 512.0
margin_top = 84.0
margin_right = 512.0
margin_bottom = 107.0

[node name="LocalScore" type="Label" parent="CenterContainer/HBoxContainer"]
material = SubResource( 8 )
margin_bottom = 23.0
align = 1

[node name="NewRecord" type="Label" parent="CenterContainer/HBoxContainer"]
visible = false
material = SubResource( 7 )
margin_top = 27.0
margin_right = 146.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "New record !"

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 512.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 329.0
margin_top = 32.0
margin_right = 695.0
margin_bottom = 55.0
text = "Escape to Pause    |    F11 for Fullscreen"
[connection signal="pressed" from="PauseMenu/CenterContainer/HBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/HBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GameOverMenu/CenterContainer/HBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="GameOverMenu/CenterContainer/HBoxContainer/Retry" to="." method="_on_Retry_pressed"]
